src/k8s/secured_app/network-policies/default-deny-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-traffic
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
