src/k8s/secured_app/network-policies/dev-restrict-traffic.yaml
# Kubernetes Network Policies follow a "deny by default" model.
# So what is not specified here will by denied (e.g. from inside Pods we cannot send requests to the API server)
# Following NetworkPolicy concerns dev namespace and allows:

# alpine-dev -> nginx
# nginx <- alpine-dev
# alpine-dev -> CoreDNS
# vuln-app - only external access through NodePort

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    # unknown pods are isolated for ingress and egress connectivity
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-from-alpine
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress # isolated for egress connectivity
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: alpine-dev
      ports:
        - protocol: TCP
          port: 4430
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alpine-to-nginx
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: alpine-dev
  policyTypes:
    - Ingress # isolated for ingress connectivity
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 4430
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# vuln-app can be accessed from outside the cluster on port 6000
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nodeport-vuln-app
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: vuln-app
  policyTypes:
    - Ingress
    - Egress # isolated for egress connectivity
  ingress:
    # allows incoming traffic from every IP address on port 6000
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 6000 # vuln-app port
